--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   <body>
   <script src="https://cdn.tailwindcss.com"></script>
     <div id="root"></div>
-    <script type="module" src="src/main.jsx"></script>
+    <script type="module" src="app.jsx"></script>
   </body>
 </html>
